2008-06-11  Neil Roberts  <neil@o-hand.com>

	* clutter/clutter-actor.c (clutter_actor_allocate): Fixed the
	logic when detecting whether the actor has moved.

2008-06-11  Iain Holmes  <iain@openedhand.com>

	* configure.ac: Detect the GL headers in flavour=fruity

	* clutter/fruity/clutter-stage-fruity.c: Update the Fruity backend to 
	use the new size negotiation API.

2008-06-11  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-label.c (clutter_label_allocate): Keep the
	layout if the size of the allocation is the same as the last
	allocation received by the label.

2008-06-11  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-actor.c: Notify :x, :y, :width and :height
	properties using ClutterUnits, not pixels.

2008-06-11  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/eglnative/clutter-stage-egl.c: Update the EGL native
	backend to use the new size negotiation API.

2008-06-11  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/sdl/clutter-stage-sdl.c: Update the SDL backend to
	use the new size negotiation API.

2008-06-11  Emmanuele Bassi  <ebassi@openedhand.com>

	Bug #961 - Fails to build on OSX

	* clutter/osx/clutter-stage-osx.c: Update the OSX backend to
	use the new size negotiation API.

2008-06-11  Emmanuele Bassi  <ebassi@openedhand.com>

	* autogen.sh: Force overwriting when glib-gettextize is
	invoked by autogen.sh.

2008-06-10  Neil Roberts  <neil@o-hand.com>

	* clutter/clutter-main.c: Include <locale.h> for setlocale()

2008-06-10  Emmanuele Bassi  <ebassi@openedhand.com>

	* clutter/clutter-child-meta.c: Fix section name

	* clutter/clutter-container.c:
	(clutter_container_child_set_property),
	(clutter_container_child_get_property): Fix gtk-doc parameter
	name.

	* clutter/clutter-container.h: Fix documentation of the
	interface vfuncs.

	* clutter/clutter-event.h: Fix documentation.

	* clutter/clutter-feature.h: Fix documentation.

	* clutter/clutter-types.h: Add ClutterRequestMode.
